Added placeholder for mentors

--- a/index.html
+++ b/index.html
@@ -44,9 +44,51 @@
 				style="height: fit-content; width: 25em; margin: auto 0; box-shadow: 0 0 1em .1em black; border: 1px solid var(--purple);">
 		</div>
 
-		<div>
+		<div class="people-list">
 			<h1>Speakers & guests</h1>
-			<div class="" id="speakers-and-guests" style="margin-top: 2em;">git
+			<div>
+				<div>
+					<img src="./src/img/bruno-dard.jpg" alt="Mr. Bruno Dard">
+					<div>
+						<h2>Mr. Bruno Dard</h2>
+						<p>Luxury Brand management specialist, Hotel Institute Montreux, Switzerland</p>
+					</div>
+				</div>
+				<div>
+					<img src="./src/img/gemma-coughlan.jpg" alt="Ms. Gemma Coughlan">
+					<div>
+						<h2>Ms. Gemma Coughlan</h2>
+						<p>Hanze University Netherlands Honours Workshop</p>
+					</div>
+				</div>
+				<div>
+					<img src="./src/img/laura-escoda-rogiers.jpg" alt="Laura Escoda Rogiers">
+					<div>
+						<h2>Laura Escoda Rogiers</h2>
+						<p>Marketing for Startups International Business School Honors Student</p>
+					</div>
+				</div>
+				<div>
+					<img src="./src/img/andrei-nicolae.jpg" alt="Andrei Nicolae">
+					<div>
+						<h2>Andrei Nicolae</h2>
+						<p>CEO of Youni<br>How to Launch a startup & how to create efficient teams</p>
+					</div>
+				</div>
+				<div>
+					<img src="./src/img/stefan-tapescu.jpg" alt="Ștefan Țăpescu">
+					<div>
+						<h2>Ștefan Țăpescu</h2>
+						<p>Co-Founder Youni<br>How to build a pitch deck that gets the investment</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- TODO: add correct names, pictures, and descriptions for the mentors -->
+		<div class="people-list">
+			<h1>Mentors of the Youth & Innovators</h1>
+			<div>
 				<div>
 					<img src="./src/img/bruno-dard.jpg" alt="Mr. Bruno Dard">
 					<div>
