--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	</div>
 
 
-	<div class="slide high-slide multiple-slides" style="border-radius: 1em 1em 0 0;">
+	<div class="slide multiple-slides" style="border-radius: 1em 1em 0 0;">
 
-		<div style="display: flex; gap: 5em;">
+		<div class="high-slide" style="display: flex; gap: 5em;">
 			<div>
 				<h1>What is KZ International Youth Summit?</h1>
 				<p>The KZ Youth Summit is student run conference that gives the opportunity to high school students to learn
@@ -44,9 +44,9 @@
 				style="height: fit-content; width: 25em; margin: auto 0; box-shadow: 0 0 1em .1em black; border: 1px solid var(--purple);">
 		</div>
 
-		<div class="people-list">
+		<div class="low-slide">
 			<h1>Speakers & guests</h1>
-			<div>
+			<div class="people-list">
 				<div>
 					<img src="./src/img/bruno-dard.jpg" alt="Mr. Bruno Dard">
 					<div>
@@ -86,9 +86,9 @@
 		</div>
 
 		<!-- TODO: add correct names, pictures, and descriptions for the mentors -->
-		<div class="people-list">
+		<div class="high-slide">
 			<h1>Mentors of the Youth & Innovators</h1>
-			<div>
+			<div class="people-list">
 				<div>
 					<img src="./src/img/bruno-dard.jpg" alt="Mr. Bruno Dard">
 					<div>
