--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 		<div class="high-slide" style="display: flex; gap: 5em;">
 			<div>
 				<h1>What is KZ International Youth Summit?</h1>
-				<p>The KZ Youth Summit is student run conference that gives the opportunity to high school students to learn
+				<p style="font-size: larger;">The KZ Youth Summit is student run conference that gives the opportunity to high school students to learn
 					about
 					entrepreneurship and business. The conference includes workshops and presentations from industry experts and a
 					Shark Tank session for students to pitch their ideas.</p>
 				<h2 style="margin-top: 3em;">Prizes and scholarships include:</h2>
-				<ul>
+				<ul style="font-size: larger;">
 					<li>Free studying abroad consultation;</li>
 					<li>Access to Youni webinars and workshops;</li>
 					<li>Certificate of participation from Swiss University;</li>
@@ -144,18 +144,16 @@
 	<div> <!-- Wrapper for parallax effect -->
 		<div id="location-and-date" class="slide"
 			style="color: white; box-sizing: border-box; height: 100vh; display: flex; justify-content: space-around; align-items: center;">
-			<div>
+			<a href="https://www.google.com/maps/place/Almaty+Management+University/@43.206293,76.8910963,17z/data=!3m1!4b1!4m6!3m5!1s0x38836895257e39cb:0x28bb8b25d8c43156!8m2!3d43.206293!4d76.893285!16s%2Fm%2F0h53fdh%22%3E" target="_blank">
 				<img src="./src/img/location-icon.svg" alt="Location">
 				<h2>Where?</h2>
 				<p>ALMAU (Almaty Management University) Rozybakiev Street 227, Almaty 050060</p>
-
-				
-			</div>
-			<div>
+			</a>
+			<a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=KIYS+%28Kazakhstan+International+Youth+Summit%29&iso=20230429T10&p1=382" target="_blank">
 				<img src="./src/img/calendar-icon.svg" alt="Date">
 				<h2>When?</h2>
 				<p>Date: 29-30 April<br>Time: 10:00 - 17:00</p>
-			</div>
+			</a>
 		</div>
 	</div>
 
@@ -165,7 +163,7 @@
 		<p>By youth, with youth, for youth. We aim to educate the young minds into developing an analytic and systematic
 			mindset which will help them take the most useful decisions.</p>
 		<br>
-		<h2 style="text-align: center;">Interested? Learn more.</h2>
+		<h2 style="text-align: center;">Interested? <a style="color: white; font-weight: 800;" href="./info.html">Learn more.</a></h2>
 	</div>
 
 
