--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<li>Total cash prize of €500 for the best ambassadors.</li>
 				</ul>
 			</div>
-			<img src="./src/img/what-is-kz-international-youth-summit.jpg" alt="Kazakhstan International Youth Summit"
+			<img src="./src/image/what-is-kz-international-youth-summit.jpg" alt="Kazakhstan International Youth Summit"
 				style="height: fit-content; width: 25em; margin: auto 0; box-shadow: 0 0 1em .1em black; border: 1px solid var(--purple);">
 		</div>
 
@@ -48,35 +48,35 @@
 			<h1>Speakers & guests</h1>
 			<div class="people-list">
 				<div>
-					<img src="./src/img/bruno-dard.png" alt="Mr. Bruno Dard">
+					<img src="./src/image/bruno-dard.png" alt="Mr. Bruno Dard">
 					<div>
 						<h2>Mr. Bruno Dard</h2>
 						<p>Luxury Brand management specialist, Hotel Institute Montreux, Switzerland</p>
 					</div>
 				</div>
 				<div>
-					<img src="./src/img/gemma-coughlan.png" alt="Ms. Gemma Coughlan">
+					<img src="./src/image/gemma-coughlan.png" alt="Ms. Gemma Coughlan">
 					<div>
 						<h2>Ms. Gemma Coughlan</h2>
 						<p>Hanze University Netherlands Honours Workshop</p>
 					</div>
 				</div>
 				<div>
-					<img src="./src/img/laura-escoda.png" alt="Laura Escoda Rogiers">
+					<img src="./src/image/laura-escoda.png" alt="Laura Escoda Rogiers">
 					<div>
 						<h2>Laura Escoda Rogiers</h2>
 						<p>Marketing for Startups International Business School Honors Student</p>
 					</div>
 				</div>
 				<div>
-					<img src="./src/img/andrei-nicolae.png" alt="Andrei Nicolae">
+					<img src="./src/image/andrei-nicolae.png" alt="Andrei Nicolae">
 					<div>
 						<h2>Andrei Nicolae</h2>
 						<p>CEO of Youni<br>How to Launch a startup & how to create efficient teams</p>
 					</div>
 				</div>
 				<div>
-					<img src="./src/img/stefan-tapescu.png" alt="Ștefan Țăpescu">
+					<img src="./src/image/stefan-tapescu.png" alt="Ștefan Țăpescu">
 					<div>
 						<h2>Ștefan Țăpescu</h2>
 						<p>Co-Founder Youni<br>How to build a pitch deck that gets the investment</p>
@@ -90,7 +90,7 @@
 			<h1>Mentors of the Youth & Innovators</h1>
 			<div class="people-list">
 				<div>
-					<img src="./src/img/daniela-bordei.png" alt="Mrs. Daniela Bordei">
+					<img src="./src/image/daniela-bordei.png" alt="Mrs. Daniela Bordei">
 					<div>
 						<h2>Mrs. Daniela Bordei</h2>
 						<p>Our mentor, innovator & the
@@ -106,7 +106,7 @@
 					</div>
 				</div>
 				<div>
-					<img src="./src/img/alexia-dobjanschi.png" alt="Mrs. Alexia Dobjanschi">
+					<img src="./src/image/alexia-dobjanschi.png" alt="Mrs. Alexia Dobjanschi">
 					<div>
 						<h2>Mrs. Alexia Dobjanschi</h2>
 						
@@ -117,7 +117,7 @@
 					</div>
 				</div>
 				<div>
-					<img src="./src/img/carina-ilie.png" alt="Mrs. Carina-Ilie">
+					<img src="./src/image/carina-ilie.png" alt="Mrs. Carina-Ilie">
 					<div>
 						<h2>Mrs. Carina Ilie</h2>
 						<p>Mentor of PR & Finance<br>Lead of PR & Finance in over 15
@@ -126,7 +126,7 @@
 					</div>
 				</div>
 				<div>
-					<img src="./src/img/delia-dumbrava.png" alt="Mrs. Delia Dumbrava">
+					<img src="./src/image/delia-dumbrava.png" alt="Mrs. Delia Dumbrava">
 					<div>
 						<h2>Mrs. Delia Dumbrava</h2>
 						<p>Mentor of Marketing<br>Managed the marketing
@@ -145,12 +145,12 @@
 		<div id="location-and-date" class="slide"
 			style="color: white; box-sizing: border-box; height: 100vh; display: flex; justify-content: space-around; align-items: center;">
 			<a href="https://www.google.com/maps/place/Almaty+Management+University/@43.206293,76.8910963,17z/data=!3m1!4b1!4m6!3m5!1s0x38836895257e39cb:0x28bb8b25d8c43156!8m2!3d43.206293!4d76.893285!16s%2Fm%2F0h53fdh%22%3E" target="_blank">
-				<img src="./src/img/location-icon.svg" alt="Location">
+				<img src="./src/image/location-icon.svg" alt="Location">
 				<h2>Where?</h2>
 				<p>ALMAU (Almaty Management University) Rozybakiev Street 227, Almaty 050060</p>
 			</a>
 			<a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=KIYS+%28Kazakhstan+International+Youth+Summit%29&iso=20230429T10&p1=382" target="_blank">
-				<img src="./src/img/calendar-icon.svg" alt="Date">
+				<img src="./src/image/calendar-icon.svg" alt="Date">
 				<h2>When?</h2>
 				<p>Date: 29-30 April<br>Time: 10:00 - 17:00</p>
 			</a>
