--- a/info.html
+++ b/info.html
@@ -16,7 +16,7 @@
 		style="background-color: var(--plum-light); color: white; box-shadow: 0 0 2em 1em rgba(0, 0, 0, .7);">
     <div style="display: flex; align-items: center; justify-content: space-between;">
       <h1>Information about this event</h1>
-      <a href="./y4y.html"><img src="./src/img/4youni.png" alt="Youni for Youth" style="height: 10em; background-color: var(--purple); padding: 2em; border-radius: 1em; box-shadow: inset 0 0 2em 1em rgba(0, 0, 0, .4);"></a>
+      <a href="./y4y.html"><img src="./src/image/4youni.png" alt="Youni for Youth" style="height: 10em; background-color: var(--purple); padding: 2em; border-radius: 1em; box-shadow: inset 0 0 2em 1em rgba(0, 0, 0, .4);"></a>
     </div>
 	</div>
 
@@ -24,7 +24,7 @@
 	<div class="slide multiple-slides" style="border-radius: 1em 1em 0 0;">
 
 		<div class="low-slide" style="display: flex; gap: 5em;">
-      <img src="./src/img/shark-tank.jpg" alt="Shark Tank"
+      <img src="./src/image/shark-tank.jpg" alt="Shark Tank"
         style="margin: auto 0; height: fit-content; width: 25em; box-shadow: 0 0 1em .1em black; border: 1px solid var(--purple);">
 			<div>
         <h1>What will happen?</h1>
@@ -118,10 +118,10 @@
     </div>
     <div style="display: flex;">
       <div style="width: 50%; display: flex; justify-content: center;">
-        <img src="./src/img/ambasadori-qr.png" alt="Ambassadors QR code" style="border-radius: .3em; height: 10em; width: 10em;">
+        <img src="./src/image/ambasadori-qr.png" alt="Ambassadors QR code" style="border-radius: .3em; height: 10em; width: 10em;">
       </div>
       <div style="width: 50%; display: flex; justify-content: center;">
-        <img src="./src/img/participanti-qr.png" alt="Participants QR code" style="border-radius: .3em; height: 10em; width: 10em;">
+        <img src="./src/image/participanti-qr.png" alt="Participants QR code" style="border-radius: .3em; height: 10em; width: 10em;">
       </div>
     </div>
 	</div>
